--- a/index.html
+++ b/index.html
@@ -26,12 +26,13 @@ body {
 text-align:justify;  
 margin:auto; 
 padding:1em; 
-color:black; 
-background-color:#aacc99; 
+color:white; 
+background-color:#6692C8; 
 font:1em 'Helvetica Neue', Arial, Verdana, sans-serif; 
 line-height:1.4em; }
-a { color:crimson; font-weight:bold; }
-#header {text-align:center; margin:1.5em 0;}
+a { color:#e7e893; font-weight:bold; }
+#header {text-align:center; margin:1.5em 0; color:white; }
+h3 { color:#195e9c; }
 #map { height: 700px; 
 padding: 0;
 margin: 0;
@@ -83,6 +84,9 @@ Introductory text on Human Water Security.
     <h1>Human Water Security</h1>
   </div>
     <div class="span6">
+      <h3>Supporters and sponsors</h3>
+      <a href="http://www.cuny.edu"><img src="img/cuny_square_RGB_blue.png" alt="www.cuny.edu" style="border-width:0"/></a>
+      <!--
       <div id="disqus_thread"></div>
         <script type="text/javascript">
           var disqus_shortname = 'test'; 
@@ -96,13 +100,10 @@ Introductory text on Human Water Security.
         </script>
         <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 	<a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
-    </div>
-    <div class="span4">
-      <a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Transitional" /></a>
-      <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/us/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-nc-sa/3.0/us/88x31.png" /></a>
-      <iframe src="http://ghbtns.com/github-btn.html?user=flengyel&amp;repo=WallStreetDollar&amp;type=fork" width="53" height="20"></iframe>
+    -->
     </div>
     <div class="span6">
+      <h3>Panic buttons</h3>
       <div class="g-plusone" data-annotation="inline" data-width="300"></div>
       <script type="text/javascript">
         (function() { var po = document.createElement('script'); 
@@ -111,8 +112,13 @@ Introductory text on Human Water Security.
           var s = document.getElementsByTagName('script')[0]; 
           s.parentNode.insertBefore(po, s); })();
       </script>
+      <a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Transitional" /></a>
+    </div>
+    <div class="span12">
     </div>
     <div class="span6">
+    <h3>License</h3>
+      <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/us/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-nc-sa/3.0/us/88x31.png" /></a>
       <small>
       Human Water Threat by <a href="https://plus.google.com/u/0/111972627358501525662/posts" property="cc:attributionName" rel="cc:attributionURL">Tian Luan and Florian Lengyel</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/us/">Creative Commons Attribution-Noncommercial-Share Alike 3.0 United States License</a>.
       </small>
