--- a/index.html
+++ b/index.html
@@ -21,32 +21,38 @@
 <script src="http://libs.cartocdn.com/cartodb.js/v3/cartodb.uncompressed.js"></script>
 
 <style type="text/css"> 
-
+/*
 body { 
 text-align:justify;  
 margin:auto; 
 padding:1em; 
-color:white; 
-background-color:#6692C8; 
-font:1em 'Helvetica Neue', Arial, Verdana, sans-serif; 
-line-height:1.4em; }
-a { color:#e7e893; font-weight:bold; }
-#header {text-align:center; margin:1.5em 0; color:white; }
-h3 { color:#195e9c; }
-#map { height: 700px; 
+}
+*/
+#map  { height: 700px; 
 padding: 0;
-margin: 0;
+margin: 0; 
 }
 </style> 
 </head>
 <body>
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
 <div class="container">
-  <p>
-Introductory text on Human Water Security.
-  </p>
-  <p>  </p>
   <div class="row">
     <div class="span12"> 
+  <div id="header">
+    <h1>Human Water Security</h1>
+  </div>
+  <p>
+Introductory text on Human Water Security. Perhaps buttons or an accordion sidebar with
+instructions replaces this. 
+  </p>
       <div id="map"></div>
       <script>
       window.onload = function() {
@@ -80,9 +86,6 @@ Introductory text on Human Water Security.
       </script>
       <br><br/>
     </div> 
-  <div id="header">
-    <h1>Human Water Security</h1>
-  </div>
     <div class="span6">
       <h3>Supporters and sponsors</h3>
       <a href="http://www.cuny.edu"><img src="img/cuny_square_RGB_blue.png" alt="www.cuny.edu" style="border-width:0"/></a>
@@ -103,7 +106,7 @@ Introductory text on Human Water Security.
     -->
     </div>
     <div class="span6">
-      <h3>Panic buttons</h3>
+      <h3>Share</h3>
       <div class="g-plusone" data-annotation="inline" data-width="300"></div>
       <script type="text/javascript">
         (function() { var po = document.createElement('script'); 
@@ -112,6 +115,7 @@ Introductory text on Human Water Security.
           var s = document.getElementsByTagName('script')[0]; 
           s.parentNode.insertBefore(po, s); })();
       </script>
+<div class="fb-like" data-href="http://rose.ccny.cuny.edu/~florian/hws/" data-send="true" data-width="450" data-show-faces="true"></div>
       <a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Transitional" /></a>
     </div>
     <div class="span12">
@@ -120,7 +124,7 @@ Introductory text on Human Water Security.
     <h3>License</h3>
       <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/us/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-nc-sa/3.0/us/88x31.png" /></a>
       <small>
-      Human Water Threat by <a href="https://plus.google.com/u/0/111972627358501525662/posts" property="cc:attributionName" rel="cc:attributionURL">Tian Luan and Florian Lengyel</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/us/">Creative Commons Attribution-Noncommercial-Share Alike 3.0 United States License</a>.
+      Human Water Threat by <a href="https://plus.google.com/u/0/111972627358501525662/posts" property="cc:attributionName" rel="cc:attributionURL">CUNY Environmental CrossRoads Initiative, Advance Science Research Center, CUNY</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/us/">Creative Commons Attribution-Noncommercial-Share Alike 3.0 United States License</a>.
       </small>
     </div>
   </div> 
