FireFox bootstrap/Google Maps conflict. Resolved following https://github.com/twbs/bootstrap/issues/1552 Addition of #map img { max-width: none; } must immediately follow #map { ... } CSS id override. Moreover, the fix is sensitive to comments between the two! Adding comments can break the fix!

--- a/index.html
+++ b/index.html
@@ -28,10 +28,13 @@ margin:auto;
 padding:1em; 
 }
 */
-#map  { height: 700px; 
+#map { height: 700px; 
 padding: 0;
 margin: 0; 
 }
+#map img { max-width: none; }
+/* #map img tag fixes CartoDB CSS problem in FireFox. Note that
+   the fix is sensitive to the placement of comments in the CSS!!! */
 </style> 
 </head>
 <body>
