--- a/index.html
+++ b/index.html
@@ -91,12 +91,14 @@ instructions replaces this.
     </div> 
     <div class="span6">
       <h3>Supporters and sponsors</h3>
-      <a href="http://www.cuny.edu"><img src="img/cuny_square_RGB_blue.png" alt="www.cuny.edu" style="border-width:0"/></a>
+      <a href="http://www.cuahsi.org"><img src="img/cuahsi_logo_sm.gif" alt="http://www.cuahsi.org/" style="border-width:0"/></a>
+      <a href="http://www.cuny.edu"><img src="img/cuny-logo.gif" alt="www.cuny.edu" style="border-width:0"/></a>
+      <a href="http://asrc.cuny.edu"><img src="img/cuny-asrc-logo.png" alt="asrc.cuny.edu" style="border-width:0"/></a>
       <!--
       <div id="disqus_thread"></div>
         <script type="text/javascript">
           var disqus_shortname = 'test'; 
-          var disqus_url = 'http://rose.ccny.cuny.edu/~florian/hws/index.html';
+          var disqus_url = 'http://lily.ccny.cuny.edu/~florian/hws/index.html';
 	          /* * * DON'T EDIT BELOW THIS LINE * * */
 	    (function() {
 	      var dsq = document.createElement('script'); 
@@ -118,7 +120,7 @@ instructions replaces this.
           var s = document.getElementsByTagName('script')[0]; 
           s.parentNode.insertBefore(po, s); })();
       </script>
-<div class="fb-like" data-href="http://rose.ccny.cuny.edu/~florian/hws/" data-send="true" data-width="450" data-show-faces="true"></div>
+<div class="fb-like" data-href="http://lily.ccny.cuny.edu/~florian/hws/" data-send="true" data-width="450" data-show-faces="true"></div>
       <a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Transitional" /></a>
     </div>
     <div class="span12">
