We have extracted the data values, but our new survey table really can be normalized. We write only the cartodb_id from the adjusted_hws_threat to hws_survey, and include in this table the survey_value, the latlng value the user picked (this will be different from the grid square and depend on the user, whom we hope is accurate), the canned tweet that we generate based on the users perception of quality, the user story and the photo URL. Then we're done with the data model. We have to set markers, show an info window, give the user the option to select bad, so-so, good and enter freeform text and a URL. We also have some SQL to insert data into the new table, and we may want to generate the new survey map from the inputed data...

--- a/index.html
+++ b/index.html
@@ -86,7 +86,9 @@ instructions replaces this.
             var sql = new cartodb.SQL({ user: 'asrc' });
             sql.execute("SELECT ST_AsGeoJSON(the_geom),value FROM adjusted_hws_threat WHERE cartodb_id = " + data.cartodb_id)
             .done(function(data) {
-               console.log(data.rows);
+               // here we illustrate how to get the values -- we will later insert the
+               // a user selected value (not the one we recovered), a cartodb_id and the geom, I guess.
+               console.log(data.rows, data.rows[0].st_asgeojson, data.rows[0].value, latlng);
             })
             .error(function(errors) {
     // errors contains a list of errors
