--- a/index.html
+++ b/index.html
@@ -1,63 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<title>Human Water Security</title>
-<meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
-<meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
-<link rel="shortcut icon" href="http://cartodb.com/assets/favicon.ico" />
+  <head>
+    <meta charset="utf-8">
+    <!--Edit the title of the page-->
+    <title>Human Water Security</title>
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
+    <link rel="shortcut icon" href="http://cartodb.com/assets/favicon.ico" />
+    <link rel="stylesheet" href="http://libs.cartocdn.com/cartodb.js/v3/themes/css/cartodb.css" />
+    <!--[if lte IE 8]>
+      <link rel="stylesheet" href="http://libs.cartocdn.com/cartodb.js/v3/themes/css/cartodb.ie.css" />
+    <![endif]-->
+    <!--Switch between the different themes changing the stylesheet below - light-theme.css |dark-theme.css -->
+    <link rel="stylesheet" href="css/light-theme.css">
+    <link rel="stylesheet" href="css/makeitresponsive.css">
 
-<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
-<link href="bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
-
-<link rel="stylesheet" href="http://libs.cartocdn.com/cartodb.js/v3/themes/css/cartodb.css" />
-<!--[if lte IE 8]>
-  <link rel="stylesheet" href="http://libs.cartocdn.com/cartodb.js/v3/themes/css/cartodb.ie.css" />
-<![endif]-->
 
 
-<!-- include google maps library *before* load cartodb.js -->
-<script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
-<!-- include cartodb.js library -->
-<script src="http://libs.cartocdn.com/cartodb.js/v3/cartodb.uncompressed.js"></script>
+<!-- Bootstrap CSS -->
+<!--
+  <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
+  <link href="bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
+-->
 
-<style type="text/css"> 
-/*
-body { 
-text-align:justify;  
-margin:auto; 
-padding:1em; 
-}
-*/
-#map { height: 700px; 
-padding: 0;
-margin: 0; 
-}
+<!-- CartoDB CSS -->
+  <link rel="stylesheet" href="http://libs.cartocdn.com/cartodb.js/v2/themes/css/cartodb.css" />
+  <!--[if lte IE 8]>
+    <link rel="stylesheet" href="http://libs.cartocdn.com/cartodb.js/v2/themes/css/cartodb.ie.css" />
+  <![endif]-->
+
+<!-- Leaflet CSS -->
+  <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.css" />
+  <!--[if lte IE 8]>
+     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.ie.css" />
+  <![endif]-->
+
+<!-- Google Maps (for basemap) -->
+  <script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
+<!-- cartodb.js library (must be loaded after Google Maps) -->
+  <script src="http://libs.cartocdn.com/cartodb.js/v3/cartodb.uncompressed.js"></script>
+
+<!-- jQuery -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
+
+<!-- Leaflet -->
+  <script src="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.js"></script>
+  <script type="text/javascript" src="../js/wax.leaf.min.js"></script>
+  <script type="text/javascript" src="../dist/cartodb-leaflet-min.js"></script>
+  <script type="text/javascript" src="../dist/cartodb-popup-min.js"></script>
+
+<style>
+#map { height: 700px; padding: 0; margin: 0; }
 #map img { max-width: none; }
-/* #map img tag fixes CartoDB CSS problem in FireFox. Note that
-   the fix is sensitive to the placement of comments in the CSS!!! */
+<!-- #map img tag fixes CartoDB CSS problem in FireFox. Note that
+   the fix is sensitive to the placement of comments in the CSS!!! -->
 </style> 
-</head>
-<body>
-<div id="fb-root"></div>
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
-<div class="container">
-  <div class="row">
-    <div class="span12"> 
-  <div id="header">
-    <h1>Human Water Security</h1>
-  </div>
-  <p>
-Introductory text on Human Water Security. Perhaps buttons or an accordion sidebar with
-instructions replaces this. 
-  </p>
-      <div id="map"></div>
-      <script>
+  </head>
+  <body>
+
+    <div class="map" id="map"></div>
+
+    <div class="sidepanel">
+      <div class="wrapper">
+        <div class="context subheader">
+          <p>Map created by <a href="http://asrc.cuny.edu/crossroads">CUNY Advanced Science Research Center</a></p>
+        </div>
+        <h1>Human Water Security</h1>
+        <p>This interactive survey of Human Water Security (HWS) is
+           based on an analysis reported in the 2010 September 30 issue 
+           of Nature.  The analysis was the first global-scale initiative to 
+           quantify the impact of human-induced stressors on human water 
+           security and riverine biodiversity. The map illustrates global 
+           threats to Human Water Security (HWS) accounting for beneficial 
+           investments in water infrastructure and management such as dams, 
+           sustainable water use practices, improved access to water 
+           resources, and improvements in clean drinking water supplies. 
+         </p>
+
+        <!--Copy and paste the div below for creating content blocks-->
+        <h3>Instructions</h3>
+        <p>
+           Researchers at the CUNY Advanced Science Research Center and CUASI 
+           seek your opinion of the water resources accessible to you. You 
+           may select your location on the map, provide your opinion, tell 
+           your story about the water resources in your area, and provide a 
+           link to a picture on social media. 
+        </p>
+        <h3>Sources</h3>
+        <p>
+        C. J. Vörösmarty, P. B. McIntyre, M. O. Gessner, D. Dudgeon, 
+        A. Prusevich, P. Green, S. Glidden, S. E. Bunn, C. A. Sullivan,	
+        C. Reidy Liermann &amp; P. M. Davies.
+        <a href="http://www.nature.com/nature/journal/v467/n7315/full/nature09440.html#/supplementary-information">
+        <i>Global threats to human water security and river biodiversity.</i>
+        </a>
+        Nature <strong>467</strong>, 555–561 (30 September 2010). 
+        </p>
+	Further information can be obtained from <a href="http://riverthreat.net">riverthreat.net</a>
+
+        <div class="context footer">
+      <p>
+      <a href="http://www.cuahsi.org"><img src="img/cuahsi_logo_sm.gif" alt="http://www.cuahsi.org/" style="border-width:0"/></a>
+      <a href="http://www.cuny.edu"><img src="img/cuny-logo.gif" alt="www.cuny.edu" style="border-width:0"/></a>
+      <a href="http://asrc.cuny.edu"><img src="img/cuny-asrc-logo.png" alt="asrc.cuny.edu" style="border-width:0"/></a>
+<!--
+<script src="bootstrap/js/bootstrap.min.js"></script>
+-->
+       </p>
+        </div>
+      </div>
+    </div>
+    <script type="text/javascript">
       window.onload = function() {
         cartodb.createVis('map', 'http://asrc.cartodb.com/api/v2/viz/9cfc68f0-ea4d-11e2-8078-3085a9a9563c/viz.json', {
           sharable: true,
@@ -68,7 +123,7 @@ instructions replaces this.
           center_lat: 0,
           center_lon: 0,
           zoom: 3,
-          infowindow: false  // maybe cartodb is grabbing the value from us if the default is true
+          infowindow: false  
         })
         .done(function(vis, layers) { 
           // layer 0 is the base layer
@@ -81,6 +136,15 @@ instructions replaces this.
           });
           layers[1].on('featureClick', function(e, latlng, pos, data) {
             // NOTE: to get the value we must do a query
+            
+            map = vis.getNativeMap();
+            var marker = new google.maps.Marker({
+            position: google.maps.LatLng(latlng.x,latlng.y),
+            map: map,
+            title: 'Hello World!'
+            });
+            marker.setMap(map);
+
             console.log('Mouseclick::'+'pos:'+pos+' latlng:'+latlng+
                          ' cartdb_id:'+data.cartodb_id);
             var sql = new cartodb.SQL({ user: 'asrc' });
@@ -89,6 +153,7 @@ instructions replaces this.
                // here we illustrate how to get the values -- we will later insert the
                // a user selected value (not the one we recovered), a cartodb_id and the geom, I guess.
                console.log(data.rows, data.rows[0].st_asgeojson, data.rows[0].value, latlng);
+               
             })
             .error(function(errors) {
     // errors contains a list of errors
@@ -105,54 +170,7 @@ instructions replaces this.
           console.log(err);
         });
        }
-      </script>
-      <br><br/>
-    </div> 
-    <div class="span6">
-      <h3>Supporters and sponsors</h3>
-      <a href="http://www.cuahsi.org"><img src="img/cuahsi_logo_sm.gif" alt="http://www.cuahsi.org/" style="border-width:0"/></a>
-      <a href="http://www.cuny.edu"><img src="img/cuny-logo.gif" alt="www.cuny.edu" style="border-width:0"/></a>
-      <a href="http://asrc.cuny.edu"><img src="img/cuny-asrc-logo.png" alt="asrc.cuny.edu" style="border-width:0"/></a>
-      <!--
-      <div id="disqus_thread"></div>
-        <script type="text/javascript">
-          var disqus_shortname = 'test'; 
-          var disqus_url = 'http://lily.ccny.cuny.edu/~florian/hws/index.html';
-	          /* * * DON'T EDIT BELOW THIS LINE * * */
-	    (function() {
-	      var dsq = document.createElement('script'); 
-	      dsq.type = 'text/javascript'; dsq.async = true;
-	      dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
-	      (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq); })();
-        </script>
-        <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-	<a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
-    -->
-    </div>
-    <div class="span6">
-      <h3>Share</h3>
-      <div class="g-plusone" data-annotation="inline" data-width="300"></div>
-      <script type="text/javascript">
-        (function() { var po = document.createElement('script'); 
-          po.type = 'text/javascript'; po.async = true;
-          po.src = 'https://apis.google.com/js/plusone.js';
-          var s = document.getElementsByTagName('script')[0]; 
-          s.parentNode.insertBefore(po, s); })();
-      </script>
-<div class="fb-like" data-href="http://lily.ccny.cuny.edu/~florian/hws/" data-send="true" data-width="450" data-show-faces="true"></div>
-      <a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Transitional" /></a>
-    </div>
-    <div class="span12">
-    </div>
-    <div class="span6">
-    <h3>License</h3>
-      <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/us/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-nc-sa/3.0/us/88x31.png" /></a>
-      <small>
-      Human Water Threat by <a href="https://plus.google.com/u/0/111972627358501525662/posts" property="cc:attributionName" rel="cc:attributionURL">CUNY Environmental CrossRoads Initiative, Advance Science Research Center, CUNY</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/us/">Creative Commons Attribution-Noncommercial-Share Alike 3.0 United States License</a>.
-      </small>
-    </div>
-  </div> 
-</div>
-<script src="bootstrap/js/bootstrap.min.js"></script>
-</body>
-</html>
+    </script>
+
+  </body>
+      </html>
