Internal reference to Nature paper.

--- a/index.html
+++ b/index.html
@@ -69,14 +69,15 @@
         </div>
         <h1>Human Water Security</h1>
         <p>This interactive survey of Human Water Security (HWS) is
-           based on an analysis reported in the 2010 September 30 issue 
-           of Nature.  The analysis was the first global-scale initiative to 
-           quantify the impact of human-induced stressors on human water 
-           security and riverine biodiversity. The map illustrates global 
-           threats to Human Water Security (HWS) accounting for beneficial 
-           investments in water infrastructure and management such as dams, 
-           sustainable water use practices, improved access to water 
-           resources, and improvements in clean drinking water supplies. 
+           based on the first global-scale initiative to quantify the 
+           impact of human-induced stressors on human water security 
+           and riverine biodiversity <a href="#Nature2010">[1]</a>. 
+           The map illustrates global threats 
+           to Human Water Security (HWS) accounting for beneficial 
+           investments in water infrastructure and management such 
+           as dams, sustainable water use practices, improved access 
+           to water resources, and improvements in clean drinking 
+           water supplies. 
          </p>
 
         <!--Copy and paste the div below for creating content blocks-->
@@ -90,7 +91,7 @@
         </p>
         <h3>Sources</h3>
         <p>
-        C. J. Vörösmarty, P. B. McIntyre, M. O. Gessner, D. Dudgeon, 
+        <a name="Nature2010">1.</a> C. J. Vörösmarty, P. B. McIntyre, M. O. Gessner, D. Dudgeon, 
         A. Prusevich, P. Green, S. Glidden, S. E. Bunn, C. A. Sullivan,	
         C. Reidy Liermann &amp; P. M. Davies.
         <a href="http://www.nature.com/nature/journal/v467/n7315/full/nature09440.html#/supplementary-information">
